ultima modificacion pagina almeria

--- a/02_almeria/index.html
+++ b/02_almeria/index.html
@@ -114,50 +114,68 @@
                 <!--El Elemento article de HTML (<article>) representa una composición auto-contenida en un documento, página, una aplicación o en el sitio, que se destina a distribuir de forma independiente o reutilizable, por ejemplo, en la sindicación. Podría ser un mensaje en un foro, un artículo de una revista o un periódico, una entrada de blog, un comentario de un usuario, un widget interactivo o gadget, o cualquier otro elemento independiente del contenido.-->
                 <article>
                     <div class="content">
-                        <p>Es el centro neurálgico de la
+                        <p>
+                            Es el centro neurálgico de la
                             <strong>Comarca Metropolitana de Almería</strong>, en el extremo sureste de la Península Ibérica y de la comarca turística
-                            de Almería-Cabo de Gata-Níjar.</p>
-                        <p>La rodean por el oeste la sierra de Gádor, por el norte Sierra Alhamilla y por el este el valle y delta del río Andarax
+                            de Almería-Cabo de Gata-Níjar.
+                        </p>
+                        <p>
+                            La rodean por el oeste la sierra de Gádor, por el norte Sierra Alhamilla y por el este el valle y delta del río Andarax
                             y, más allá, una llanura que culmina en la sierra de Cabo de Gata. Al sur, su puerto y litoral se abren a una amplia
-                            bahía sobre el mar Mediterráneo</p>
-                        <p>Fue fundada por Abderramán III en un emplazamiento dominado anteriormente por otras urbes como la ibera Urci o la romana
+                            bahía sobre el mar Mediterráneo
+                        </p>
+                        <p>
+                            Fue fundada por Abderramán III en un emplazamiento dominado anteriormente por otras urbes como la ibera Urci o la romana
                             Portus Magnus y desempeñó un papel fundamental durante el califato de Córdoba, llegando a ser el puerto más importante
                             del
                             <em>al-Ándalus omeya</em>. Alcanzó su máximo esplendor durante la taifa, en el siglo XI, convirtiéndose bajo el reinado
-                            de <q>Almotacín en un emporio comercial y cultural</q>.</p>
-                        <p>Tras su incorporación a la
+                            de <q>Almotacín en un emporio comercial y cultural</q>.
+                        </p>
+                        <p>
+                            Tras su incorporación a la
                             <em>Corona de Castilla</em> en 1489, la población fue diezmada por terremotos, plagas e incursiones de los piratas. La recuperación
                             no fue patente hasta finales del siglo XIX, con el resurgir de la minería y la exportación de la uva de Ohanes, y de
                             nuevo a partir de los años 1960, gracias a la explosión de la agricultura intensiva, el turismo, la construcción y la
-                            industria del mármol</p>
-                        <p>Entre su patrimonio histórico-artístico, cabe destacar la Alcazaba musulmana (siglos X a XV), la catedral-fortaleza de la
+                            industria del mármol
+                        </p>
+                        <p>
+                            Entre su patrimonio histórico-artístico, cabe destacar la Alcazaba musulmana (siglos X a XV), la catedral-fortaleza de la
                             Encarnación (siglo XVI), el cargadero de mineral o Cable Inglés (finales del siglo XIX), y el Museo de Almería, reinaugurado
-                            en 2006</p>
+                            en 2006
+                        </p>
                     </div>
                     <div class="puerto">
                         <figure>
                             <img src="./images/puerto_almeria.jpg" alt="Imagen del puerto de Almeria">
                             <figcaption><strong>Puerto de Almeria</strong></figcaption>
-                            <p class="primero">La Autoridad Portuaria de Almería presta un servicio importante a la industria auxiliar de la agricultura, tanto en importación
-                            de inputs como en exportación de productos terminados. También estudia con la comunidad portuaria, propiciar las condiciones
-                            que permitan exportar hortalizas por vía marítima. Estos sectores tienen gran parte de sus mercados fuera de nuestras fronteras
-                            y precisan adoptar modelos alternativos de transporte para acceder a nuevos destinos cada vez más lejanos.</p>
-                            <p>El Puerto de Almería está llevando a cabo actuaciones medioambientales para mejorar el control en la carga de graneles y
-                            la reducción de emisión de partículas en la manipulación de mercancías. También trata otros asuntos como las emisiones acústicas
-                            de los buques durante su estancia en puerto.</p>
+                            <p class="primero">
+                                La Autoridad Portuaria de Almería presta un servicio importante a la industria auxiliar de la agricultura, tanto en importación
+                                de inputs como en exportación de productos terminados. También estudia con la comunidad portuaria, propiciar las condiciones
+                                que permitan exportar hortalizas por vía marítima. Estos sectores tienen gran parte de sus mercados fuera de nuestras fronteras
+                                y precisan adoptar modelos alternativos de transporte para acceder a nuevos destinos cada vez más lejanos.
+                            </p>
+                            <p>
+                                El Puerto de Almería está llevando a cabo actuaciones medioambientales para mejorar el control en la carga de graneles y
+                                la reducción de emisión de partículas en la manipulación de mercancías. También trata otros asuntos como las emisiones acústicas
+                                de los buques durante su estancia en puerto.
+                            </p>
                         </figure>
                         <figure>
                             <img src="./images/Almeria2.jpg" alt="La antigua Alcazaba de Almería">
                             <figcaption><strong>Alcazaba de Almería</strong></figcaption>
-                            <p class="primero">La Alcazaba y Murallas del Cerro de San Cristóbal de la ciudad española de Almería es uno de los conjuntos monumentales y
-                            arqueológicos árabes más importantes de la Península Ibérica. Sus casi mil años de historia nos ha permitido conocer la evolución
-                            experimentada en la arquitectura civil y militar durante la dominación árabe en Andalucía, debido a su construcción en diferentes
-                            fases y épocas, así como el origen y evolución de la ciudad.</p>
-                            <p>Situadas en un cerro aislado, la Alcazaba es una sólida y extensa fortaleza con murallas de más de tres metros de anchura
-                            y cinco de altura, formando un recinto cerrado sobre sí mismo, pero conectado con los lienzos de la Muralla que configuran
-                            y dan sentido a su propio desarrollo, dentro de una unidad más compleja, como es la fortificación de la ciudad, en el que
-                            el barranco de la Hoya y el cerro de San Cristóbal mantiene una conexión directa con la Alcazaba, tanto física como visual,
-                            creando un conjunto de extraordinaria magnitud.</p>
+                            <p class="primero">
+                                La Alcazaba y Murallas del Cerro de San Cristóbal de la ciudad española de Almería es uno de los conjuntos monumentales y
+                                arqueológicos árabes más importantes de la Península Ibérica. Sus casi mil años de historia nos ha permitido conocer la evolución
+                                experimentada en la arquitectura civil y militar durante la dominación árabe en Andalucía, debido a su construcción en diferentes
+                                fases y épocas, así como el origen y evolución de la ciudad.
+                            </p>
+                            <p>
+                                Situadas en un cerro aislado, la Alcazaba es una sólida y extensa fortaleza con murallas de más de tres metros de anchura
+                                y cinco de altura, formando un recinto cerrado sobre sí mismo, pero conectado con los lienzos de la Muralla que configuran
+                                y dan sentido a su propio desarrollo, dentro de una unidad más compleja, como es la fortificación de la ciudad, en el que
+                                el barranco de la Hoya y el cerro de San Cristóbal mantiene una conexión directa con la Alcazaba, tanto física como visual,
+                                creando un conjunto de extraordinaria magnitud.
+                            </p>
                         </figure>
                     </div>
                 
@@ -173,32 +191,42 @@
                         <hr>
                         <figure class="ciudad">
                             <img src="./images/nijar.jpg" alt="Foto de Nijar">
-                            <figcaption>Níjar es un municipio español de la provincia de Almería y la comunidad autónoma de Andalucía. En el año 2016 el municipio
-                            contaba con 28.579 habitantes y era el cuarto municipio más poblado de la provincia por detrás de Almería, Roquetas de Mar
-                            y El Ejido.</figcaption>
+                            <figcaption>
+                                Níjar es un municipio español de la provincia de Almería y la comunidad autónoma de Andalucía. En el año 2016 el municipio
+                                contaba con 28.579 habitantes y era el cuarto municipio más poblado de la provincia por detrás de Almería, Roquetas de Mar
+                                y El Ejido.
+                            </figcaption>
                         </figure>
                         <figure class="ciudad">
                             <img src="./images/roquetas.jpg" alt="Foto de Roquetas del Mar">
-                            <figcaption>Roquetas de Mar es un municipio español de la provincia de Almería y la comunidad autónoma de Andalucía, capital del partido
-                            judicial homónimo, situado en la comarca del Poniente Almeriense y a 21 kilómetros de la capital de provincia, Almería.</figcaption>
+                            <figcaption>
+                                Roquetas de Mar es un municipio español de la provincia de Almería y la comunidad autónoma de Andalucía, capital del partido
+                                judicial homónimo, situado en la comarca del Poniente Almeriense y a 21 kilómetros de la capital de provincia, Almería.
+                            </figcaption>
                         </figure>
                         <figure class="ciudad">    
                             <img src="./images/santa-fe-de-mondujar.jpg" alt="Foto de Santa Fe de Mondújar">
-                            <figcaption>Santa Fe de Mondújar es un municipio español, de la provincia de Almería y la comunidad autónoma de Andalucía. Se encuentra
-                            ubicado en el área metropolitana de almería. En el año 2016, contaba con 431 habitantes. Su extensión superficial es de 35
-                            km².</figcaption>
+                            <figcaption>
+                                Santa Fe de Mondújar es un municipio español, de la provincia de Almería y la comunidad autónoma de Andalucía. Se encuentra
+                                ubicado en el área metropolitana de almería. En el año 2016, contaba con 431 habitantes. Su extensión superficial es de 35
+                                km².
+                            </figcaption>
                         </figure>
                         <figure class="ciudad">
                             <img src="./images/purchena.jpg" alt="Foto de Purchena">
-                            <figcaption>Purchena es una ciudad1​y un municipio español de la provincia de Almería y la comunidad autónoma de Andalucía, situada en
-                            el centro de la comarca del Valle del Almanzora, a 91 km de la capital provincial, Almería y al regazo de las sierras de
-                            Filabres y de las Estancias.</figcaption>
+                            <figcaption>
+                                Purchena es una ciudad1​y un municipio español de la provincia de Almería y la comunidad autónoma de Andalucía, situada en
+                                el centro de la comarca del Valle del Almanzora, a 91 km de la capital provincial, Almería y al regazo de las sierras de
+                                Filabres y de las Estancias.
+                            </figcaption>
                         </figure>
                         <figure class="ciudad">
                             <img src="./images/pechina.jpg" alt="Foto de Pechina">
-                            <figcaption>Pechina es un municipio español perteneciente a la provincia de Almería, en Andalucía. En 2016 contaba con 3.900 habitantes,
-                            aunque se integra en el área metropolitana de Almería. Su extensión superficial es de 46 km² con una densidad de 76,39
-                            hab/km².</figcaption>
+                            <figcaption>
+                                Pechina es un municipio español perteneciente a la provincia de Almería, en Andalucía. En 2016 contaba con 3.900 habitantes,
+                                aunque se integra en el área metropolitana de Almería. Su extensión superficial es de 46 km² con una densidad de 76,39
+                                hab/km².
+                            </figcaption>
                         </figure>
                     </div>
                     <div>
