--- a/javascript_Web/04_DOM/enlaces.html
+++ b/javascript_Web/04_DOM/enlaces.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Enlaces cambiantes</title>
-    <script src="enlaces.js"></script>
+    <script src="enlaces2.js"></script>
 </head>
 <body>
     <header>
@@ -13,10 +13,12 @@
     </header>
     <main>
         <ul>
-            <li><a href="#">Linkedin</a></li>
-            <li><a href="#">Twiter</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#"></a>Tumbn</li>
+            <li><a href="#" id="linkedin" class="social">Linkedin</a></li>
+            <li><a href="#" id="twitter" class="social">Twiter</a></li>
+            <li><a href="#" id="facebook" class="social">Facebok</a></li>
+            <li><a href="#" id ="tumblr" class="social">Tumblr</a></li>
+            <li><a href="#" id ="flickr" class="social">Flickr</a></li>
+            <li><a href="#" id ="instagram" class="social">Instagram</a></li>
         </ul>
 
     </main>
