--- a/javascript_Web/06_forms/formulario2.html
+++ b/javascript_Web/06_forms/formulario2.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Formulario</title>
     <link rel="stylesheet" href="./form1.css">
-    <script src="./form_app1.js" type="module"></script>
-
+    <script src="./form_app2.js" type="module"></script>
 </head>
 
 <body>
@@ -16,24 +15,28 @@
         <h1>Ejemplo de formulario</h1>
     </header>
     <main>
-        <form action="" method="GET">
+        <form action="" method="GET" id="form1">
             <fieldset>
                 <legend>Datos personales</legend>
                 <div class="control-group">
                     <label for="nombre">Escribe tu nombre</label>
-                    <input type="text" name="nombre" id="nombre" maxlength="20" autofocus>
+                    <input type="text" name="nombre" id="nombre" maxlength="20" autofocus required minlength="2">
                 </div>
                 <div class="control-group">
                     <label for="apellido">Escribe tu apellido</label>
-                    <input type="text" name="apellido" id="apellido" placeholder="Escribe tus apellidos">
+                    <input type="text" name="apellido" id="apellido" placeholder="Escribe tus apellidos" required>
                 </div>
                 <div class="control-group">
                     <label for="email">Escribe tu correo</label>
-                    <input type="email" name="email" id="email" placeholder="Escribe tus correo">
+                    <input type="email" name="email" id="email" placeholder="Escribe tus correo" required>
+                </div>
+                <div id="fecha" class="control-group">
+                    <label for="fecha">Fecha de nacimiento</label>
+                    <input type="date" name="fecha" id="fecha">
                 </div>
                 <div class="control-group">
-                    <label for="passwd">Escribe tu contraseña</label>
-                    <input type="password" name="passwd" id="passwd" placeholder="Escribe tus contraseña">
+                    <label for="password">Escribe tu contraseña</label>
+                    <input type="password" name="password" id="password" placeholder="Escribe tus contraseña">
                 </div>
             </fieldset>
             <fieldset>
@@ -53,7 +56,7 @@
                     <label for="isOk2">También estoy deacuero con ....</label>
                 </div>
             </fieldset>
-            <fieldset id="acedemic">
+            <fieldset id="acedemic" class="ocultar">
                 <legend>Datos academicos</legend>
                 <legend>Que turno quieres</legend>
                 <div class="radio-group">
@@ -65,22 +68,19 @@
                     <label for="noche">Noche</label>
                 </div>
                 <div class="control-group">
-                    <label for="curso">Selecciona curso</label>
+                    <label for="curso">Selecciona un curso</label>
                     <select name="curso" id="curso">
-                        <option value="">Seleccione Curso</option>
                         <option value="front">Desarrollo Front</option>
                         <option value="web">Diseño Web</option>
-                        <option value="node">Servidores Node</option>
-                        <option value="sql">SQL</option>
+                        <option value="node">Servidores</option>
+                        <option value="sql">Bases de Datos</option>
+                    </select>
+                    <label for="asignaturas" class="cursos">Selecciona asignatura:</label>
+                    <select name="topics" id="topics">
+                        <option value="0"></option>
                     </select>
                 </div>
-                <div class="control-group">
-                    <label for="asignatura">Selecciona una Asignatura</label>
-                    <select name="asignatura" id="asignatura">
-                        <option value="">Seleccione Asignatura</option>
-                    </select>
-                </div>
-
+                
             </fieldset>
             <div class="control-group">
                 <button type="button" id="btnSaludar">Saludar</button>
