--- a/javascript_Web/06_Validacion/formulario.html
+++ b/javascript_Web/06_Validacion/formulario.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Formulario</title>
     <link rel="stylesheet" href="./form1.css">
-    <script src="./form_app2.js" type="module"></script>
+    <script src="./form_app_1.js" type="module"></script>
 </head>
 
 <body>
@@ -15,28 +15,31 @@
         <h1>Ejemplo de formulario</h1>
     </header>
     <main>
-        <form action="" method="GET" id="form1">
+        <form action="" method="GET" id='form1'>
             <fieldset>
                 <legend>Datos personales</legend>
                 <div class="control-group">
                     <label for="nombre">Escribe tu nombre</label>
-                    <input type="text" name="nombre" id="nombre" maxlength="20" autofocus required minlength="2">
+                    <input type="text" name="nombre" id="nombre" maxlength="20" 
+                     required minlength="2" autofocus>
                 </div>
                 <div class="control-group">
                     <label for="apellido">Escribe tu apellido</label>
-                    <input type="text" name="apellido" id="apellido" placeholder="Escribe tus apellidos" required>
+                    <input type="text" name="apellido" id="apellido" 
+                    placeholder="Escribe tus apellidos" required>
                 </div>
-                <div class="control-group">
-                    <label for="email">Escribe tu correo</label>
-                    <input type="email" name="email" id="email" placeholder="Escribe tus correo" required>
-                </div>
-                <div id="fecha" class="control-group">
+                <div id="div_fecha" class="control-group">
                     <label for="fecha">Fecha de nacimiento</label>
                     <input type="date" name="fecha" id="fecha">
+                </div>                
+                <div class="control-group">
+                    <label for="email">Escribe tu correo</label>
+                    <input type="email" name="email" id="email" 
+                        required placeholder="Escribe tus correo">
                 </div>
                 <div class="control-group">
-                    <label for="password">Escribe tu contraseña</label>
-                    <input type="password" name="password" id="password" placeholder="Escribe tus contraseña">
+                    <label for="passwd">Escribe tu contraseña</label>
+                    <input type="password" name="passwd" id="passwd" placeholder="Escribe tus contraseña">
                 </div>
             </fieldset>
             <fieldset>
@@ -70,17 +73,17 @@
                 <div class="control-group">
                     <label for="curso">Selecciona un curso</label>
                     <select name="curso" id="curso">
+                        <option value=""></option>
                         <option value="front">Desarrollo Front</option>
                         <option value="web">Diseño Web</option>
                         <option value="node">Servidores</option>
                         <option value="sql">Bases de Datos</option>
                     </select>
-                    <label for="asignaturas" class="cursos">Selecciona asignatura:</label>
-                    <select name="topics" id="topics">
-                        <option value="0"></option>
-                    </select>
                 </div>
-                
+                <div id="div_topics" class="control-group ocultar">
+                    <label for="curso">Selecciona tres asignuras</label>
+                    <select name="topics" id="topics" multiple></select>
+                </div>                    
             </fieldset>
             <div class="control-group">
                 <button type="button" id="btnSaludar">Saludar</button>
