--- a/javascript_Web/06_forms/form_1/formulario2.html
+++ b/javascript_Web/06_forms/form_1/formulario2.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Formulario</title>
     <link rel="stylesheet" href="./form1.css">
-    <script src="./form_app1.js" type="module"></script>
-
+    <script src="./form_app2.js" type="module"></script>
 </head>
 
 <body>
@@ -16,21 +15,17 @@
         <h1>Ejemplo de formulario</h1>
     </header>
     <main>
-        <!-- <form action="" method="get" id="form1" onsubmit="return false"> -->
-        <form action="" method="get" id="form1" onsubmit="return false">
+        <form action="" method="GET">
             <fieldset>
                 <legend>Datos personales</legend>
                 <div class="control-group">
                     <label for="nombre">Escribe tu nombre</label>
-                    <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre" minlength="2" maxlength="20" autofocus>
+                    <input type="text" name="nombre" id="nombre" maxlength="20" autofocus>
+                    <!-- required minlength="2" -->
                 </div>
                 <div class="control-group">
                     <label for="apellido">Escribe tu apellido</label>
                     <input type="text" name="apellido" id="apellido" placeholder="Escribe tus apellidos">
-                </div>
-                <div class="control-group">
-                    <label for="fecha">Fecha de Nacimiento</label>
-                    <input type="date" name="fecha" id="fecha" placeholder="Fecha Nacimiento">
                 </div>
                 <div class="control-group">
                     <label for="email">Escribe tu correo</label>
@@ -39,10 +34,6 @@
                 <div class="control-group">
                     <label for="passwd">Escribe tu contraseña</label>
                     <input type="password" name="passwd" id="passwd" placeholder="Escribe tus contraseña">
-                </div>
-                <div class="control-group">
-                    <label for="passwd2">Escribe de nuevo la contraseña</label>
-                    <input type="password" name="passwd2" id="passwd2" placeholder="Escribe tus contraseña">
                 </div>
             </fieldset>
             <fieldset>
@@ -53,17 +44,16 @@
                 <legend>Conformidad</legend>
                 <div class="check-group">
                     <input type="checkbox" name="isOk" id="isOk">
-                    <label for="isOk">Estoy deacuerdo con las
+                    <label for="isOk">Estoy deacuero con las
                         <a href="condiciones.html">condiciones</a>
                     </label>
                 </div>
                 <div class="check-group">
                     <input type="checkbox" name="isOk2" id="isOk2">
-                    <label for="isOk2">También estoy deacuerdo con ....</label>
+                    <label for="isOk2">También estoy deacuero con ....</label>
                 </div>
             </fieldset>
             <fieldset id="acedemic" class="ocultar">
-                <!-- <fieldset id="acedemic"> -->
                 <legend>Datos academicos</legend>
                 <legend>Que turno quieres</legend>
                 <div class="radio-group">
@@ -77,20 +67,12 @@
                 <div class="control-group">
                     <label for="curso">Selecciona un curso</label>
                     <select name="curso" id="curso">
-                        <option value="">Seleccione un Curso...</option>
                         <option value="front">Desarrollo Front</option>
                         <option value="web">Diseño Web</option>
-                        <option value="node">Servidores Node</option>
-                        <option value="sql">SQL</option>
+                        <option value="node">Servidores</option>
+                        <option value="sql">Bases de Datos</option>
                     </select>
                 </div>
-                <div class="control-group">
-                    <label for="asignatura">Selecciona una Asignatura</label>
-                    <select name="asignatura" id="asignatura">
-                        <option value="">Seleccione una...</option>
-                    </select>
-                </div>
-
             </fieldset>
             <div class="control-group">
                 <button type="button" id="btnSaludar">Saludar</button>
