--- a/javascript_Web/08_ajax/index.html
+++ b/javascript_Web/08_ajax/index.html
@@ -26,7 +26,7 @@
             <button type="button" id="btnAjaxModif">Modificar item</button>  
         </div>
          <div>
-            <input type="number" name="itemB" id="itemB">
+            <input type="number" name="itemB" id="itemB" min="1">
             <button type="button" id="btnAjaxBorrar">Borrar item</button>     
          </div>   
       
