--- a/javascript_Web/formok/index.html
+++ b/javascript_Web/formok/index.html
@@ -111,7 +111,7 @@
                     </div>      
                 </fieldset>
                 <fildsetclass="identificacion">
-                    <legend>Fecha de hoy</legend>
+                    <legend>Fecha de hoy: </legend>
                     <div id="fechaHoy"></div>
                 </fildset>
                                
